--- a/package.json
+++ b/package.json
@@ -3,18 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "ts-node --project tsconfig.server.json server/server.ts",
+    "start:next": "next start",
+    "build:server": "tsc --project tsconfig.server.json",
+    "build:next": "next build",
+
+    "install:mongo": "npm i mongoose @typegoose/typegoose",
+    "install:auth": "npm i jsonwebtoken bcryptjs cookie-parser nookies",
+
+    "dev:server": "nodemon --watch './**/*.ts' --exec 'ts-node' server/server.ts",
+    "build": "npm run build:next && npm run build:server",
+    "start": "NODE_ENV=production node dist/server.js"
   },
   "dependencies": {
     "@types/node": "18.15.10",
     "@types/react": "18.0.30",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "sass": "^1.60.0",
+    "ts-node": "^10.9.1"
   }
 }
