--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-  "name": "four-in-a-row_evolution",
-  "version": "0.1.0",
+  "name": "app-name",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "ts-node --project tsconfig.server.json server/server.ts",
+    "dev": "ts-node --project tsconfig.json server/server.ts",
     "start:next": "next start",
-    "build:server": "tsc --project tsconfig.server.json",
+    "build:server": "tsc --project tsconfig.json",
     "build:next": "next build",
 
     "install:mongo": "npm i mongoose @typegoose/typegoose",
     "install:auth": "npm i jsonwebtoken bcryptjs cookie-parser nookies",
 
     "dev:server": "nodemon --watch './**/*.ts' --exec 'ts-node' server/server.ts",
-    "build": "npm run build:next && npm run build:server",
-    "start": "NODE_ENV=production node dist/server.js"
+    "build": "npm run build:server && npm run build:next",
+    "start": "NODE_ENV=production node dist/server/server.js"
   },
   "dependencies": {
-    "@types/node": "18.15.10",
-    "@types/react": "18.0.30",
-    "@types/react-dom": "18.0.11",
-    "axios": "^1.3.4",
+    "@types/node": "20.11.0",
+    "@types/react": "18.2.47",
+    "@types/react-dom": "18.2.18",
+    "axios": "^1.6.5",
     "cookie-parser": "^1.4.6",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "next": "13.2.4",
+    "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.2"
+    "typescript": "5.3.3"
   },
   "devDependencies": {
-    "sass": "^1.60.0",
-    "ts-node": "^10.9.1"
+    "sass": "^1.69.7",
+    "ts-node": "^10.9.2"
   }
 }
