--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "skipLibCheck": true,
     "strict": false,
     "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
+    "noEmit": false,
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -14,7 +14,7 @@
     "incremental": true,
     "esModuleInterop": true,
     "module": "commonjs",
-
+    "outDir": "./dist",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
   },
